# Podcast-DAI

./: .gitignore  Cargo.toml  pubspec.yaml  readme.md
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/podcast_dai/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: main.rs
src/: ffmpeg_manager.rs  input_handler.rs  main.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
