[package]
name = "Podcast-DAI"
version = "0.1.0"
authors = ["Eric Wätke <ewaetke10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.8.0"
console = "0.14.1"
human-panic = "1.0.3"
dirs = "3.0"